fix open cart height on mobile

--- a/src/components/shoppingCart/shoppingCart.module.scss
+++ b/src/components/shoppingCart/shoppingCart.module.scss
@@ -21,6 +21,7 @@
   width: max(300px, 40vw);
 
   height: 100dvh;
+  transition: height 0.3s linear;
 
   padding: 0rem 0.75rem 1rem;
 
